1999-04-11  Tom Tromey  <tromey@cygnus.com>

	First cut at allowing objects in subdirectories:
	* m4/Makefile.am (m4data_DATA): Added minuso.m4.
	* Makefile.am (dist_script_DATA): Added compile.
	* m4/minuso.m4: New file.
	* automake.in (initialize_global_constants): Added compile to
	common_files.
	(seen_cc_c_o): New global.
	(scan_one_configure_file): Set it when AM_PROG_CC_C_O seen.
	(handle_options): Recognize `subdir-objects' option.
	(lang_c_rewrite): Added directory argument.
	(lang_yacc_rewrite): Likewise.
	(lang_yaccxx_rewrite): Likewise.
	(lang_lex_rewrite): Likewise.
	(lang_lexxx_rewrite): Likewise.
	(handle_single_transform_list): Pass directory to _rewrite
	function.  Generate dependencies for dirstamp files for each .o;
	it is just the rules we want to create once.
	(lang_c_rewrite): Handle `subdir-objects' option.
	(lang_c_rewrite): Require `compile' program.
	* compile: New file.

	* automake.in (initialize_per_input): Initialize %directory_map.
	(handle_single_transform_list): Only create .dirstamp rules once
	per directory.

	* m4/gcj.m4 (AM_PROG_GCJ): Use AC_CHECK_PROGS, not AC_CHECK_PROG.

	Fix for confh.test:
	* automake.in (configure_input_files): New global.
	(scan_configure): Set it.
	(handle_configure): Use configure_input_files when determining
	which subdirs have a Makefile.am.  Fixes confh.test.
	(handle_configure): Only recognize acconfig.h in top srcdir.

1999-04-10  Tom Tromey  <tromey@cygnus.com>

	* depend2.am (%.o): Use `$(*D)/$(*F)', not just `$(*F)'.
	(%.lo): Likewise.

	* automake.in (am_install_var): Remove redundancies from the
	result.  Fixes test cond8.test.

	* automake.in (handle_single_transform_list): Handle dependency
	tracking when files are created in subdirs.  Error if object in
	subdir has `..' component.

	* automake.in (initialize_global_constants): Use $(TAR), not tar.

	* automake.in (handle_ltlibraries): Allow check_LTLIBRARIES.

	* automake.in (lang_yacc_finish): Added missing `&'.
