@@ -4,6 +4,7 @@
   if there are two `bar.o' files and the timing is just right
   This only happens with parallel make and no-`-c -o' compiler,
   so it probably isn't very important
+  change compile.am and lang_c_finish to deal with -c -o.
 
 * Run automake before libtool.  It will report an error but
   still won't put the file into the disty.  This is wrong.
