@@ -815,7 +815,10 @@ sub get_object_extension
 	$xform = (($use_dependencies
 		   ? 's/^NOTDEPEND.*$//;'
 		   : 's/^NOTDEPEND//;')
-		  . ($seen_objext ? 's/^OBJEXT//;' : 's/^OBJEXT.*$//;'));
+		  . ($seen_objext ? 's/^OBJEXT//;' : 's/^OBJEXT.*$//;')
+		  . 's/\@MINUSO\@/'
+		  . (defined $options{'subdir-objects'} ? '-o \$\@' : '')
+		  . '/;');
 	$output_rules .= &file_contents_with_transform ($xform, 'compile');
 
 	&push_phony_cleaners ('compile');
