@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996, 1997, 1998 Free Software Foundation, Inc.
+## Copyright (C) 1994, 1995-98, 1999 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -16,12 +16,12 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 NOTDEPEND.c.o:
-NOTDEPEND	$(COMPILE) -c $<
+NOTDEPEND	$(COMPILE) -c@MINUSO@ $<
 
 OBJEXT# FIXME: We should only use cygpath when building on Windows,
 OBJEXT# and only if it is available.
 OBJEXT.c.obj:
-OBJEXT	$(COMPILE) -c `cygpath -w $<`
+OBJEXT	$(COMPILE) -c@MINUSO@ `cygpath -w $<`
 
 .s.o:
 	$(COMPILE) -c $<
