@@ -1,5 +1,10 @@
 1999-04-11  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (get_object_extension): Substitute @MINUSO@ when
+	including compile.am.
+	* compile.am (.c.o): Added @MINUSO@.
+	(.c.obj): Likewise.
+
 	First cut at allowing objects in subdirectories:
 	* m4/Makefile.am (m4data_DATA): Added minuso.m4.
 	* Makefile.am (dist_script_DATA): Added compile.
